--- a/styles/blog-page-body/bp-body.css
+++ b/styles/blog-page-body/bp-body.css
@@ -95,5 +95,6 @@
   .blog-info-wrapper .blog-block {
     width: 100%;
     padding-top: 3%;
+    padding-right: 5%;
   }
 }/*# sourceMappingURL=bp-body.css.map */
