--- a/styles/blog-wrapper/blog.css
+++ b/styles/blog-wrapper/blog.css
@@ -65,6 +65,7 @@
   }
   .blog-info-wrapper .blog-block {
     width: 100%;
-    padding-top: 3%;
+    padding-top: 5%;
+    padding-right: 5%;
   }
 }/*# sourceMappingURL=blog.css.map */
