--- a/styles/contact-page/contact.css
+++ b/styles/contact-page/contact.css
@@ -85,7 +85,7 @@
     width: 50vw;
   }
   .content-body-page .cb-right {
-    padding-top: 5%;
+    padding: 5% 0 0 0;
     width: 100%;
     align-items: center;
   }
