--- a/styles/contact-page/contact.scss
+++ b/styles/contact-page/contact.scss
@@ -100,7 +100,7 @@
     }
 
     .cb-right {
-      padding-top: 5%;
+      padding: 5% 0 0 0;
       width: 100%;
       align-items: center;
     }
