--- a/styles/floating-body-wrapper/floating-body.css
+++ b/styles/floating-body-wrapper/floating-body.css
@@ -9,4 +9,11 @@
   border-radius: 5px;
   box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
   margin: -100px 25px 0px 25px;
+}
+
+@media (max-width: 750px) {
+  .floating-body {
+    width: 100%;
+    margin: 0;
+  }
 }/*# sourceMappingURL=floating-body.css.map */
