--- a/styles/welcome-wrapper/welcome.scss
+++ b/styles/welcome-wrapper/welcome.scss
@@ -44,5 +44,12 @@
   }
 }
 
-@media (max-width: 950) {
+@media (max-width: 750px) {
+  .home-wrapper {
+    .welcome-wrapper {
+      .welcome-header {
+        font-size: 50px;
+      }
+    }
+  }
 }
